--- a/content/blog/苏杭上海.md
+++ b/content/blog/苏杭上海.md
@@ -3,8 +3,9 @@ title: 苏杭，上海
 date: 2025-08-27T16:11:58.660Z
 ---
 
+
 因为今天心情不是特别好，然后和别人吐槽了一下，现在就还好。然后读到了一篇豆瓣的帖子“我发现应该趁年轻满足自己的爱好”，帖子之所以让我感兴趣就是帖主写的是对手机很感兴趣，然后某一天下定决心买了自己最心爱的手机。其实我现在也有一款特别钟意的手机，可惜我没那么好运，暂时还没能力购买。
-由这个帖子我又想起了之前去的杭州西湖，明明没拍几张照片，拍得也不是特别清晰。那次去心情也有点不好。但我到现在也还记得我坐在西湖边的座椅上，静静感受着西湖的风，看着西湖的湖面荡啊荡，眺望着远处的小洲。平静的祥和感真的让心身心舒畅，坐在那一切都可以烟消云散，西湖的一切都让人很有感染力，看着平静的湖面，哪怕最烦躁的人也可以静心欣赏一下美景吧。我也第一次体位到流连忘返的意思，真的很想再次去感受一下那的宁静。观自在菩提，写着写着就想到这句佛经。那里的一切都很清幽，虽有游客叨扰，但仍是掩盖不住那股让人心静的力量。除了西湖，苏州上海都没给我这种感觉。
+由这个帖子我又想起了之前去的杭州西湖，明明没拍几张照片，拍得也不是特别清晰。那次去心情也有点不好。但我到现在也还记得我坐在西湖边的座椅上，静静感受着西湖的风，看着西湖的湖面荡啊荡，眺望着远处的小洲。平静的祥和感真的让人身心舒畅，坐在那一切都可以烟消云散，西湖的一切都让人很有感染力，看着平静的湖面，哪怕最烦躁的人也可以静心欣赏一下美景吧。我也第一次体位到流连忘返的意思，真的很想再次去感受一下那的宁静。观自在菩提，写着写着就想到这句佛经。那里的一切都很清幽，虽有游客叨扰，但仍是掩盖不住那股让人心静的力量。除了西湖，苏州上海都没给我这种感觉。
 上海让人难以忘却的大概就是东方明珠，什么时候望着东方明珠的人都很多，我不过也是其中一粒尘埃。不过最让我体悟的是，权力，金钱是一种层次感，我在最底层。仰头看东方明珠是不能到达顶峰的遗憾，然而俯视上海市应该是另一种滋味。芸芸众生不能站在山顶，但是因为有芸芸众生才有的山顶。上海带来的也不止纸醉金迷，同样也有才子佳人。黄浦江继续流淌，我只想站立在苏州河畔。
 苏州我曾两次抵达，最后一次就在前不久，也算是最后的道别。可惜我还没爬上过虎丘，还没看过双塔。苏州于我来讲更是一座适合生活的城市，也是我梦想中的江南烟雨中的生活。高楼大厦鳞次栉比，曾经的江南小调也依旧荡漾其中。这是其他城市所不能比拟的。保留的青砖绿瓦还留藏着江南的古韵，多少游客不远千里赶来一睹最后的江南芳容。“江南无所有，聊赠一枝春”，春季是江南最舒适的季节，远方的来客，唯有春景就是江南最好的赠予。
 我不得不承认我依旧留恋着这些地区，一句上有天堂，下有苏杭，我为此挣扎了六年。现在十年过去了，我依旧愿意为此付出，无他，我此生活在梦里。
